[tool.poetry]
name = "words2numsrus"
version = "0.1.0"
description = "A module which can convert russian numerical words to numbers"
authors = ["Max <max.white.rabbit@gmail.com>", "mihail8531 <mihail8531@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mihail8531/Word-to-Number-Russian"
repository = "https://github.com/mihail8531/Word-to-Number-Russian"
keywords = ["numbers", "convert", "russian", "numerical"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["LICENSE.txt"]


[tool.poetry.dependencies]
python = "^3.7"
natasha = "<1"
yargy = "<0.13"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
